feat: Days 3-7 - Startup performance, memory leaks, and quick wins
Day 3-4: Startup Performance
- Added performance monitoring utility (timeToFirstPaint, timeToInteractive)
- Deferred non-critical services (analytics, sync, plugins) until after first paint
- Lazy-loaded heavy services (auth, crash reporting, plugin registry)
- Used requestIdleCallback for better performance

Day 5-6: Memory Leaks
- Added LRU cache implementation with size limits and TTL
- Created cleanup manager for timers, listeners, and AbortControllers
- Added global cache instances (searchCache, pageCache, apiCache) with limits
- Automatic cleanup of expired cache entries every 5 minutes

Day 7: Quick Wins
- Added bundle analysis script (npm run analyze:bundle)
- Added network optimization (preconnect, dns-prefetch) in index.html
- Preconnect to DuckDuckGo, Hugging Face APIs
- DNS prefetch for OpenAI and Anthropic APIs

Files Added:
- src/utils/performance.ts - Performance monitoring
- src/utils/lru-cache.ts - LRU cache with size limits
- src/utils/cleanup.ts - Cleanup manager for memory leak prevention
- scripts/analyze-bundle.js - Bundle size analysis

Files Modified:
- src/main.tsx - Deferred service initialization
- index.html - Network optimization
- package.json - Added analyze:bundle script

This significantly improves startup time and prevents memory leaks.

--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "build:lunr": "node scripts/build-lunr.js",
     "dev:fast": "npx cross-env JSDOM_NO_CANVAS=1 OB_DISABLE_HEAVY_SERVICES=1 vite --mode development",
     "clean": "node scripts/clean-cache.js",
+    "analyze:bundle": "node scripts/analyze-bundle.js",
     "clean:all": "npm run clean && rimraf node_modules && npm install",
     "kill:dev": "node scripts/kill-dev-processes.js",
     "audit:prod": "npm audit --omit=dev",
