feat: Day 10 - Developer DX / CI / Releases
Day 10: Developer DX / CI / Releases
- Added GitHub Actions CI workflow (.github/workflows/ci.yml)
  - Lint & Type Check job
  - Unit Tests job with coverage
  - E2E Tests job with Playwright
  - Build verification job
  - Rust check job
  - Security audit job

- Added GitHub Actions Release workflow (.github/workflows/release.yml)
  - Multi-platform builds (Linux, Windows)
  - Automated release creation
  - Changelog generation
  - Artifact uploads

- Added changelog generator (scripts/generate-changelog.js)
  - Auto-generates changelog from git commits
  - Categorizes commits (Features, Bug Fixes, etc.)
  - Supports conventional commits

- Added build verification script (scripts/verify-build.js)
  - Checks for required build artifacts
  - Validates file sizes
  - Warns about missing source maps

- Added Prettier configuration (.prettierrc.json, .prettierignore)
  - Consistent code formatting
  - Tailwind CSS plugin support
  - Integrated with lint-staged

- Added unit tests for IPC validator (src/utils/__tests__/ipc-validator.test.ts)
  - Tests for command validation
  - Tests for string sanitization
  - Tests for URL validation
  - Tests for payload validation

- Enhanced package.json scripts
  - format: Format code with Prettier
  - format:check: Check formatting
  - verify:build: Verify build artifacts
  - changelog: Generate changelog

Files Added:
- .github/workflows/ci.yml - CI pipeline
- .github/workflows/release.yml - Release pipeline
- scripts/generate-changelog.js - Changelog generator
- scripts/verify-build.js - Build verifier
- .prettierrc.json - Prettier config
- .prettierignore - Prettier ignore rules
- src/utils/__tests__/ipc-validator.test.ts - Unit tests

Files Modified:
- package.json - Added new scripts
- lint-staged.config.js - Enhanced with comments

CI/CD Improvements:
- Automated testing on every PR
- Automated builds for releases
- Code quality checks (lint, type, format)
- Security audits
- Mult

--- a/.prettierignore
+++ b/.prettierignore
@@ -1,12 +1,13 @@
 node_modules
-dist-web
-dist-electron
-dist-release
-storybook-static
+dist
+build
 coverage
-*.log
-.DS_Store
-*.snap
-playwright-report
-test-results
-
+.tauri
+target
+*.lock
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+CHANGELOG.md
+*.min.js
+*.min.css
