--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,161 +1,107 @@
-name: Build & Release
+name: Release
 
 on:
   push:
     tags:
-      - 'v*'
+      - 'v*.*.*'
   workflow_dispatch:
     inputs:
       version:
-        description: 'Version tag (e.g., v1.0.0)'
+        description: 'Version to release (e.g., 0.1.0)'
         required: true
+        type: string
 
 jobs:
-  build:
+  build-and-release:
+    name: Build & Release
+    runs-on: ${{ matrix.os }}
     strategy:
-      fail-fast: false
       matrix:
+        os: [ubuntu-latest, windows-latest]
         include:
-          - platform: 'windows-latest'
-            target: 'x86_64-pc-windows-msvc'
-            artifact: 'RegenBrowser-Setup.exe'
-            bundle: 'msi'
-          - platform: 'ubuntu-latest'
-            target: 'x86_64-unknown-linux-gnu'
-            artifact: 'RegenBrowser.AppImage'
-            bundle: 'appimage'
-          - platform: 'ubuntu-latest'
-            target: 'aarch64-unknown-linux-gnu'
-            artifact: 'RegenBrowser-arm64.AppImage'
-            bundle: 'appimage'
-          - platform: 'macos-latest'
-            target: 'x86_64-apple-darwin'
-            artifact: 'RegenBrowser.dmg'
-            bundle: 'dmg'
-          - platform: 'macos-latest'
-            target: 'aarch64-apple-darwin'
-            artifact: 'RegenBrowser-arm64.dmg'
-            bundle: 'dmg'
-
-    runs-on: ${{ matrix.platform }}
-
+          - os: ubuntu-latest
+            target: x86_64-unknown-linux-gnu
+          - os: windows-latest
+            target: x86_64-pc-windows-msvc
+    
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
+      - uses: actions/checkout@v4
+      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-
-      - name: Install Rust
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          targets: ${{ matrix.target }}
-
-      - name: Install system dependencies (Linux)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y \
-            libwebkit2gtk-4.1-dev \
-            libappindicator3-dev \
-            librsvg2-dev \
-            patchelf \
-            libgtk-3-dev \
-            libayatana-appindicator3-dev \
-            libxdo-dev \
-            libx11-dev
-          # Install Playwright dependencies
-          npx playwright install-deps chromium || true
-
-      - name: Install system dependencies (macOS)
-        if: matrix.platform == 'macos-latest'
-        run: |
-          brew install create-dmg || true
-          # macOS global shortcuts require accessibility permissions (handled at runtime)
-
+      
       - name: Install dependencies
         run: npm ci
-
-      - name: Install Playwright Chromium
-        run: |
-          npm install --save-dev playwright || true
-          npx playwright install chromium --with-deps || true
-
+      
       - name: Build frontend
         run: npm run build
-
-      - name: Install Ollama (for testing)
-        if: matrix.platform == 'ubuntu-latest'
-        run: |
-          curl -fsSL https://ollama.com/install.sh | sh || true
-
+      
+      - name: Setup Rust
+        uses: dtolnay/rust-toolchain@stable
+      
+      - name: Cache Cargo registry
+        uses: actions/cache@v3
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+            tauri-migration/src-tauri/target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-cargo-
+      
       - name: Build Tauri app
         working-directory: tauri-migration
+        run: |
+          npm ci
+          npm run tauri build -- --target ${{ matrix.target }}
         env:
           TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
           TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-        run: |
-          npm install
-          npm run tauri build -- --target ${{ matrix.target }} --bundles ${{ matrix.bundle }}
-
+      
       - name: Upload artifacts
-        uses: actions/upload-artifact@v4
+        uses: actions/upload-artifact@v3
         with:
-          name: ${{ matrix.artifact }}
+          name: release-${{ matrix.os }}-${{ matrix.target }}
           path: |
-            tauri-migration/src-tauri/target/${{ matrix.target }}/release/bundle/**/*
-            installer.nsi
-          retention-days: 30
+            tauri-migration/src-tauri/target/${{ matrix.target }}/release/*.exe
+            tauri-migration/src-tauri/target/${{ matrix.target }}/release/*.msi
+            tauri-migration/src-tauri/target/${{ matrix.target }}/release/*.AppImage
+          retention-days: 90
 
-  release:
-    needs: build
+  create-release:
+    name: Create GitHub Release
+    needs: build-and-release
     runs-on: ubuntu-latest
-    if: startsWith(github.ref, 'refs/tags/')
-
+    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Download all artifacts
-        uses: actions/download-artifact@v4
+      - uses: actions/checkout@v4
         with:
-          path: artifacts
-
+          fetch-depth: 0
+      
+      - name: Generate changelog
+        id: changelog
+        run: |
+          VERSION=${GITHUB_REF#refs/tags/v}
+          node scripts/generate-changelog.js $VERSION > CHANGELOG_RELEASE.md
+          echo "changelog<<EOF" >> $GITHUB_OUTPUT
+          cat CHANGELOG_RELEASE.md >> $GITHUB_OUTPUT
+          echo "EOF" >> $GITHUB_OUTPUT
+      
       - name: Create Release
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/**/*
-          body: |
-            ## 🚀 RegenBrowser ${{ github.ref_name }}
-
-            ### Downloads
-            - **Windows**: `RegenBrowser-Setup.exe` (one-click installer with Ollama)
-            - **Linux x64**: `RegenBrowser.AppImage` (runs anywhere)
-            - **Linux ARM64**: `RegenBrowser-arm64.AppImage` (for ARM laptops)
-            - **macOS Intel**: `RegenBrowser.dmg`
-            - **macOS Apple Silicon**: `RegenBrowser-arm64.dmg`
-
-            ### What's New
-            - ✅ WISPR AI agent with voice commands (Hindi/English)
-            - ✅ One-click installer (auto-downloads Ollama + models)
-            - ✅ Fully offline AI (phi3:mini + llava:7b)
-            - ✅ Trade, Research, Browse modes
-            - ✅ Screenshot analysis with GPT-4 Vision
-
-            ### Installation
-            1. Download for your platform
-            2. Run installer (Windows) or open DMG/AppImage
-            3. First launch auto-downloads AI models (~2GB)
-            4. Press `Ctrl+Space` to activate WISPR
-
-            ### System Requirements
-            - Windows 10+, Ubuntu 20+, macOS 12+
-            - 4GB RAM minimum (8GB recommended)
-            - 3GB free disk space
-
-            Made with ❤️ in India 🇮🇳
+          files: |
+            tauri-migration/src-tauri/target/**/*.exe
+            tauri-migration/src-tauri/target/**/*.msi
+            tauri-migration/src-tauri/target/**/*.AppImage
+          body_path: CHANGELOG_RELEASE.md
           draft: false
-          prerelease: ${{ contains(github.ref_name, 'beta') || contains(github.ref_name, 'alpha') }}
+          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
