--- a/package.json
+++ b/package.json
@@ -168,6 +168,7 @@
     "lint-staged": "^16.2.7",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
+    "prettier-plugin-tailwindcss": "^0.6.9",
     "semantic-release": "^25.0.2",
     "storybook": "^8.6.14",
     "ts-node": "^10.9.2",
