--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,145 +1,105 @@
-name: Build and Release
+name: Build
 
 on:
   push:
     branches: [main, master]
-  pull_request:
-    branches: [main, master]
-  release:
-    types: [created]
+    tags:
+      - 'v*'
+  workflow_dispatch:
 
 jobs:
   build-windows:
     runs-on: windows-latest
     steps:
       - uses: actions/checkout@v4
-      
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build frontend
-        run: npm run build
-      
-      - name: Build Windows app
-        working-directory: tauri-migration
-        run: npm run tauri build -- --bundles msi
-        env:
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-      
-      - name: Upload Windows artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: windows-installer
-          path: tauri-migration/src-tauri/target/release/bundle/msi/*.msi
 
-  build-macos:
-    runs-on: macos-latest
-    steps:
-      - uses: actions/checkout@v4
-      
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build frontend
-        run: npm run build
-      
-      - name: Build macOS app
-        working-directory: tauri-migration
-        run: npm run tauri build -- --bundles dmg
-        env:
-          APPLE_CERTIFICATE: ${{ secrets.APPLE_CERTIFICATE }}
-          APPLE_CERTIFICATE_PASSWORD: ${{ secrets.APPLE_CERTIFICATE_PASSWORD }}
-          APPLE_SIGNING_IDENTITY: ${{ secrets.APPLE_SIGNING_IDENTITY }}
-          APPLE_ID: ${{ secrets.APPLE_ID }}
-          APPLE_APP_SPECIFIC_PASSWORD: ${{ secrets.APPLE_APP_SPECIFIC_PASSWORD }}
-      
-      - name: Upload macOS artifacts
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Build Windows
+        run: npm run build:windows
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: macos-dmg
-          path: tauri-migration/src-tauri/target/release/bundle/dmg/*.dmg
+          name: windows-build
+          path: tauri-migration/src-tauri/target/release/bundle/
 
   build-linux:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      
-      - name: Install system dependencies
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libgtk-3-dev libayatana-appindicator3-dev librsvg2-dev
-      
-      - name: Install Rust
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Setup Rust
         uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           override: true
-      
-      - name: Install dependencies
-        run: npm ci
-      
-      - name: Build frontend
-        run: npm run build
-      
-      - name: Build Linux app
-        working-directory: tauri-migration
-        run: npm run tauri build -- --bundles appimage
-      
-      - name: Upload Linux artifacts
+
+      - name: Install system dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y libwebkit2gtk-4.0-dev libssl-dev libayatana-appindicator3-dev librsvg2-dev
+
+      - name: Build Linux
+        run: |
+          cd tauri-migration
+          npm run tauri build
+
+      - name: Upload artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: linux-appimage
-          path: tauri-migration/src-tauri/target/release/bundle/appimage/*.AppImage
+          name: linux-build
+          path: tauri-migration/src-tauri/target/release/bundle/
 
-  release:
-    needs: [build-windows, build-macos, build-linux]
-    runs-on: ubuntu-latest
-    if: github.event_name == 'release'
+  build-macos:
+    runs-on: macos-latest
     steps:
-      - name: Download Windows artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: windows-installer
-          path: ./artifacts/windows
-      
-      - name: Download macOS artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: macos-dmg
-          path: ./artifacts/macos
-      
-      - name: Download Linux artifacts
-        uses: actions/download-artifact@v4
-        with:
-          name: linux-appimage
-          path: ./artifacts/linux
-      
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            ./artifacts/windows/*.msi
-            ./artifacts/macos/*.dmg
-            ./artifacts/linux/*.AppImage
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
 
+      - name: Setup Node.js
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'npm'
+
+      - name: Install dependencies
+        run: npm ci
+
+      - name: Setup Rust
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          override: true
+
+      - name: Build macOS
+        run: |
+          cd tauri-migration
+          npm run tauri build
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: macos-build
+          path: tauri-migration/src-tauri/target/release/bundle/
