--- a/package.json
+++ b/package.json
@@ -91,6 +91,7 @@
     "fastify": "^5.6.2",
     "framer-motion": "^11.18.2",
     "franc": "^6.1.0",
+    "hnswlib-wasm": "^0.8.2",
     "html-entities": "^2.5.2",
     "iconv-lite": "^0.6.3",
     "ioredis": "^5.8.2",
