feat: Complete realtime infrastructure and agent system (Options A+B+C+D)
BREAKING: Adds complete realtime message bus and agent orchestration system

Core Infrastructure:
- Add WebSocket message bus server (tools/realtime-bus/server.js)
- Add frontend bus client (src/services/realtime/busClient.ts)
- Add content extraction script (src/content-scripts/extractor.js)
- Add streaming ResearchPanel UI component

Agents:
- Add streaming summarizer agent (tools/agent/summarizer.js)
- Add assistant/orchestrator with routing & permissions (tools/agent/assistant.js)
- Add voice transcription agent (tools/agent/voice-agent.js)
- Add market data streaming agent (tools/agent/market-agent.js)

Rust Backend:
- Add CEF host integration (tauri-migration/src-tauri/src/cef_host.rs)
- Add native Rust adblock engine (tauri-migration/src-tauri/src/adblock.rs)
- Add Tauri-bus bridge (tauri-migration/src-tauri/src/bus_bridge.rs)

Agent System (from earlier audit):
- Add DOM analyzer (src/services/agent/domAnalyzer.ts)
- Add intent parser (src/services/agent/intentParser.ts)
- Add action executor (src/services/agent/actionExecutor.ts)

Services:
- Add Ollama server wrapper (tools/ollama-server.py)
- Add FAISS vector service (tools/faiss-service.py)
- Add enhanced trade adapter with risk engine (src/services/trade/tradeAdapter.ts)

Documentation:
- Add developer quickstart guide (docs/README.dev.md)
- Add complete integration guide (docs/INTEGRATION_COMPLETE.md)
- Add audit reports and summaries

Fixes all 7 lag issues identified:
1.  Single realtime spine (message bus) - eliminates fragmented communication
2.  CEF renderer integration - cross-origin extraction & request interception
3.  Native adblock engine - sub-ms blocking decisions in Rust
4.  Assistant/orchestrator - routing, permissions, provenance
5.  Production LLM streaming - robust token streaming with backpressure
6.  Voice pipeline glue - real-time Whisper integration
7.  Observability foundation - metrics, health checks, messa

--- a/package.json
+++ b/package.json
@@ -18,6 +18,13 @@
     "dev:tauri": "cd tauri-migration && npm run tauri dev",
     "dev:realtime": "concurrently \"npm:dev:server\" \"npm:dev:tauri\" \"npm:worker:llm\"",
     "dev:trade": "concurrently \"npm:dev:realtime-server\" \"npm:dev:web\"",
+    "dev:bus": "node tools/realtime-bus/server.js",
+    "dev:agent:summarizer": "node tools/agent/summarizer.js",
+    "dev:agent:assistant": "node tools/agent/assistant.js",
+    "dev:agent:voice": "node tools/agent/voice-agent.js",
+    "dev:agent:market": "node tools/agent/market-agent.js",
+    "dev:realtime:full": "concurrently \"npm:dev:bus\" \"npm:dev:agent:summarizer\" \"npm:dev:agent:assistant\" \"npm:dev:web\"",
+    "dev:realtime:all": "concurrently \"npm:dev:bus\" \"npm:dev:agent:summarizer\" \"npm:dev:agent:assistant\" \"npm:dev:agent:voice\" \"npm:dev:agent:market\" \"npm:dev:web\"",
     "worker:llm": "node server/services/queue/llmWorker.js",
     "worker:research": "node server/services/queue/researchWorker.js",
     "test:research-flow": "node tools/test-research-flow.js",
@@ -109,6 +116,7 @@
     "lunr": "^2.3.9",
     "mammoth": "^1.6.0",
     "meilisearch": "^0.40.0",
+    "xlsx": "^0.18.5",
     "murmurhash3js": "^3.0.1",
     "node-fetch": "^3.3.2",
     "opossum": "^9.0.0",
