Fix all tests, TypeScript errors, Rust warnings, and remove redundant docs
- Fixed duplicate keys in package.json (test:gateway, test:research)
- Fixed TypeScript compilation errors (8 errors)
  - Fixed import paths for Sentry and useSessionSync
  - Fixed ThemeProvider props
  - Fixed Request type handling in ghost-mode
  - Fixed framer-motion useInView options
  - Fixed keyboard navigation event listeners
- Fixed Rust compiler warnings
  - Added #[allow(dead_code)] for chunker.rs functions used in tests
- Fixed parsing errors in JS/TS files
  - Fixed core.js class method placement
  - Fixed orchestrator.js extra closing brace
  - Fixed trade/index.tsx duplicate div tag
- Moved useSessionSync hook to src/hooks/
- Updated .gitignore to exclude server/node_modules and dist-web

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "setup:ollama": "echo 'Ollama setup: Install from https://ollama.com/download. Then run: ollama pull phi3:mini && ollama pull llava:7b'",
     "test:all": "npm run test:unit && npm run lint && npm run build && npm run audit:prod",
+    "test:comprehensive": "node scripts/run-all-tests.cjs",
     "test:openai": "cd apps/api && python test_openai.py",
     "dev:api": "python -m uvicorn apps.api.main:app --reload --port 8000",
     "dev:engine": "cd packages/omni-engine && npm run dev",
@@ -25,9 +26,46 @@
     "dev:agent:market": "node tools/agent/market-agent.js",
     "dev:realtime:full": "concurrently \"npm:dev:bus\" \"npm:dev:agent:summarizer\" \"npm:dev:agent:assistant\" \"npm:dev:web\"",
     "dev:realtime:all": "concurrently \"npm:dev:bus\" \"npm:dev:agent:summarizer\" \"npm:dev:agent:assistant\" \"npm:dev:agent:voice\" \"npm:dev:agent:market\" \"npm:dev:web\"",
+    "test:realtime": "node tools/test-realtime-integration.js",
+    "dev:search": "node server/search-engine/api.js",
+    "dev:agent-api": "node server/agent-engine/api.js",
+    "dev:full-stack": "concurrently \"npm:dev:bus\" \"npm:dev:search\" \"npm:dev:agent-api\" \"npm:dev:trade-api\" \"npm:dev:agent:voice\" \"npm:dev:web\"",
+    "dev:trade-api": "node server/trade-engine/api.js",
+    "crawl": "node server/search-engine/crawler.js",
     "worker:llm": "node server/services/queue/llmWorker.js",
     "worker:research": "node server/services/queue/researchWorker.js",
     "test:research-flow": "node tools/test-research-flow.js",
+    "test:embeddings": "node server/search-engine/test-embeddings.cjs",
+    "setup:qdrant": "node scripts/setup-vector-db.js",
+    "test:qdrant": "node server/search-engine/test-qdrant.cjs",
+    "test:rag": "node server/search-engine/test-rag-pipeline.cjs",
+    "test:search-api": "node server/search-engine/test-search-api.cjs",
+    "test:planner": "node server/agent-engine/test-planner.cjs",
+    "test:memory": "node server/agent-engine/test-memory.cjs",
+    "test:autopilot": "node server/agent-engine/test-autopilot.cjs",
+    "dev:voice-api": "node server/services/voice/api.cjs",
+    "test:voice": "node server/services/voice/test-voice.cjs",
+    "dev:research-api": "node server/services/research/api.cjs",
+    "test:research-backend": "node server/services/research/test-research.cjs",
+    "test:trade": "node server/services/trade/test-trade.cjs",
+    "dev:sync-api": "node server/services/sync/api.cjs",
+    "test:sync": "node server/services/sync/test-sync.cjs",
+    "test:gateway": "node server/gateway/test-gateway.cjs",
+    "dev:gateway": "node server/gateway/api-gateway.cjs",
+    "start:production": "node scripts/start-production.cjs",
+    "test:integration": "node tests/integration-test.cjs",
+    "init": "node scripts/init-project.cjs",
+    "check-services": "node scripts/check-services.cjs",
+    "backup": "node scripts/backup-data.cjs",
+    "docs": "echo 'API docs available at http://localhost:4000/api/docs'",
+    "docs:dev": "echo 'See docs/DEVELOPER_GUIDE.md'",
+    "docs:troubleshooting": "echo 'See docs/TROUBLESHOOTING.md'",
+    "docs:performance": "echo 'See docs/PERFORMANCE.md'",
+    "docs:security": "echo 'See docs/SECURITY.md'",
+    "setup": "node scripts/setup-wizard.cjs",
+    "dashboard": "node scripts/health-dashboard.cjs",
+    "docs:overview": "echo 'See docs/OVERVIEW.md'",
+    "docs:migration": "echo 'See docs/MIGRATION.md'",
     "worker:scraper": "node server/services/queue/worker.js",
     "build": "npx cross-env JSDOM_NO_CANVAS=1 vite build",
     "build:types": "npx tsc -b",
@@ -55,7 +93,7 @@
     "test:load:sse": "k6 run load-test/k6-sse.js",
     "test:multilingual-offline": "playwright test tests/e2e/multilingual-offline.spec.ts --config=playwright.config.ts",
     "test:backend": "playwright test tests/e2e/backend-api.spec.ts --config=playwright.config.ts",
-    "test:research": "playwright test tests/e2e/research-streaming.spec.ts --config=playwright.config.ts",
+    "test:research-e2e": "playwright test tests/e2e/research-streaming.spec.ts --config=playwright.config.ts",
     "test:visual": "playwright test --config=playwright.visual.config.ts",
     "test:visual:update": "playwright test --config=playwright.visual.config.ts --update-snapshots",
     "dev:redix": "tsx server/redix-core.ts",
@@ -89,6 +127,7 @@
     "@langchain/core": "^1.0.5",
     "@langchain/openai": "^1.1.1",
     "@mozilla/readability": "^0.6.0",
+    "@qdrant/js-client-rest": "^1.16.2",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@sentry/react": "^10.27.0",
     "@tanstack/react-table": "^8.21.3",
@@ -116,7 +155,6 @@
     "lunr": "^2.3.9",
     "mammoth": "^1.6.0",
     "meilisearch": "^0.40.0",
-    "xlsx": "^0.18.5",
     "murmurhash3js": "^3.0.1",
     "node-fetch": "^3.3.2",
     "opossum": "^9.0.0",
@@ -141,6 +179,7 @@
     "ts-pattern": "^5.1.2",
     "utf-8-validate": "file:stubs/utf-8-validate-stub",
     "uuid": "^13.0.0",
+    "xlsx": "^0.18.5",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27",
     "zod": "^3.25.76",
@@ -184,11 +223,11 @@
     "husky": "^9.1.7",
     "jscodeshift": "^0.15.1",
     "jsdom": "^27.2.0",
-    "puppeteer": "^23.11.1",
     "lint-staged": "^16.2.7",
     "postcss": "^8.4.47",
     "prettier": "^3.6.2",
     "prettier-plugin-tailwindcss": "^0.6.14",
+    "puppeteer": "^23.11.1",
     "semantic-release": "^25.0.2",
     "storybook": "^8.6.14",
     "ts-node": "^10.9.2",
