--- a/.gitignore
+++ b/.gitignore
@@ -1,109 +1,22 @@
-# Dependencies
-node_modules/
-**/node_modules/
-.pnp
-.pnp.js
-package-lock.json
-yarn.lock
+# ... existing content ...
 
-# Build outputs
-dist/
-dist-electron/
-dist-web/
-build/
-.next/
-out/
-redix-core/runtime/pkg/
-*.tsbuildinfo
-storybook-static/
+# Realtime bus
+tools/realtime-bus/node_modules/
+tools/agent/node_modules/
 
-# Environment variables
-.env
-.env.local
-.env.*.local
-.env.production
-env.js
-# Keep example.env for reference
-!.env.example
-!example.env
+# FAISS index files
+*.bin
+faiss_index.bin
+faiss_metadata.json
 
-# IDE
-.vscode/
-.idea/
-*.swp
-*.swo
-*~
+# Realtime bus
+tools/realtime-bus/node_modules/
+tools/agent/node_modules/
 
-# OS
-.DS_Store
-Thumbs.db
-
-# Rust / Tauri
-/target/
-**/target/
-/**/*.crate
-src-tauri/target/
-tauri-migration/src-tauri/target/
-
-# Binaries / installers
-*.exe
-*.msi
-*.zip
-*.tar.gz
-*.7z
-start-*.ps1
-rustup-init.exe
-
-# Logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-lerna-debug.log*
-pnpm-debug.log*
-
-# Testing
-coverage/
-.nyc_output/
-playwright-report/
-test-results/
-
-# Python
-__pycache__/
-*.py[cod]
-*$py.class
-*.so
-.Python
-
-# Misc
-.cache/
-.temp/
-tmp/
-
-# Electron (removed - using Tauri)
-*.asar
-electron/
-electron-builder/
-
-# Documentation (implementation notes)
-*_IMPLEMENTATION*.md
-*_ROADMAP*.md
-*_COMPLETE*.md
-FILES_STRUCTURE.md
-PRIVACY_STACK_IMPLEMENTATION.md
-# Allow PROJECT_STATUS.md (official project status)
-!PROJECT_STATUS.md
-
-perf/*.json
-
-# Mobile (if not building yet)
-android/
-ios/
-capacitor.config.ts
-
-# Test automation (move to separate repo later)
-playwright/
-cypress/
-
-# Large assets (only ignore very large ones - keep essential logos/icons)
-# Note: Keep logo.png, favicon, and icon files - only ignore large wallpapers/assets >500KB
+# FAISS index files
+*.bin
+faiss_index.bin
+faiss_metadata.json
+node_modules
+node_modules
+node_modules
