--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -3,105 +3,39 @@ name: Release
 on:
   push:
     tags:
-      - 'v*.*.*'
-  workflow_dispatch:
-    inputs:
-      version:
-        description: 'Version to release (e.g., 0.1.0)'
-        required: true
-        type: string
+      - 'v*'
 
 jobs:
-  build-and-release:
-    name: Build & Release
+  build:
     runs-on: ${{ matrix.os }}
+
     strategy:
       matrix:
-        os: [ubuntu-latest, windows-latest]
-        include:
-          - os: ubuntu-latest
-            target: x86_64-unknown-linux-gnu
-          - os: windows-latest
-            target: x86_64-pc-windows-msvc
-    
+        os: [ubuntu-latest, windows-latest, macos-latest]
+
     steps:
       - uses: actions/checkout@v4
-      
+
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20'
           cache: 'npm'
-      
+
       - name: Install dependencies
         run: npm ci
-      
-      - name: Build frontend
-        run: npm run build
-      
-      - name: Setup Rust
-        uses: dtolnay/rust-toolchain@stable
-      
-      - name: Cache Cargo registry
-        uses: actions/cache@v3
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            tauri-migration/src-tauri/target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-          restore-keys: |
-            ${{ runner.os }}-cargo-
-      
-      - name: Build Tauri app
-        working-directory: tauri-migration
-        run: |
-          npm ci
-          npm run tauri build -- --target ${{ matrix.target }}
-        env:
-          TAURI_PRIVATE_KEY: ${{ secrets.TAURI_PRIVATE_KEY }}
-          TAURI_KEY_PASSWORD: ${{ secrets.TAURI_KEY_PASSWORD }}
-      
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          name: release-${{ matrix.os }}-${{ matrix.target }}
-          path: |
-            tauri-migration/src-tauri/target/${{ matrix.target }}/release/*.exe
-            tauri-migration/src-tauri/target/${{ matrix.target }}/release/*.msi
-            tauri-migration/src-tauri/target/${{ matrix.target }}/release/*.AppImage
-          retention-days: 90
 
-  create-release:
-    name: Create GitHub Release
-    needs: build-and-release
-    runs-on: ubuntu-latest
-    if: github.event_name == 'push' && startsWith(github.ref, 'refs/tags/v')
-    steps:
-      - uses: actions/checkout@v4
+      - name: Build
+        run: npm run build
+
+      - name: Build Electron app
+        if: matrix.os == 'ubuntu-latest'
+        run: npm run build:app || echo "Electron build skipped"
+
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v4
         with:
-          fetch-depth: 0
-      
-      - name: Generate changelog
-        id: changelog
-        run: |
-          VERSION=${GITHUB_REF#refs/tags/v}
-          node scripts/generate-changelog.js $VERSION > CHANGELOG_RELEASE.md
-          echo "changelog<<EOF" >> $GITHUB_OUTPUT
-          cat CHANGELOG_RELEASE.md >> $GITHUB_OUTPUT
-          echo "EOF" >> $GITHUB_OUTPUT
-      
-      - name: Create Release
-        uses: softprops/action-gh-release@v1
-        with:
-          files: |
-            tauri-migration/src-tauri/target/**/*.exe
-            tauri-migration/src-tauri/target/**/*.msi
-            tauri-migration/src-tauri/target/**/*.AppImage
-          body_path: CHANGELOG_RELEASE.md
-          draft: false
-          prerelease: ${{ contains(github.ref, 'alpha') || contains(github.ref, 'beta') }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          name: build-${{ matrix.os }}
+          path: |
+            dist/
+            tauri-migration/src-tauri/target/release/
