--- a/package.json
+++ b/package.json
@@ -210,6 +210,9 @@
     "reactflow": "^11.10.3",
     "robots-parser": "^3.0.1",
     "shadcn-ui": "^0.9.4",
+    "socket.io": "^4.7.5",
+    "socket.io-client": "^4.7.5",
+    "@socket.io/redis-adapter": "^8.2.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^3.4.14",
     "tesseract.js": "^6.0.1",
@@ -218,6 +221,7 @@
     "utf-8-validate": "file:stubs/utf-8-validate-stub",
     "uuid": "^13.0.0",
     "xlsx": "^0.18.5",
+    "y-indexeddb": "^10.0.3",
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27",
     "zod": "^3.25.76",
