test: add integration test automation (all tests passing)
- Created Voice  Research integration test (PASSED: 2.12ms)
- Created Tab  GVE integration test (PASSED: 1.62ms)
- Created Offline  Online handoff test (PASSED: 90.01ms)
- Added run-all.js to execute all integration tests
- All 3 integration flows verified working
- Updated test results tracker and status documents

--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "test:all": "npm run test:unit && npm run lint && npm run build && npm run audit:prod",
     "test:performance": "node tests/performance/profile-tabs.js",
     "test:load": "k6 run tests/load/k6-load-test.js",
+    "test:integration": "node tests/integration/run-all.js",
     "test:automated": "node scripts/run-tests.js --all",
     "test:comprehensive": "node scripts/run-all-tests.cjs",
     "test:openai": "cd apps/api && python test_openai.py",
