docs: add Week 2 testing tools and templates
- Created WEEK2_TEST_REPORT_TEMPLATE.md for documenting test sessions
- Added week2-progress.js script to track testing progress
- Updated PROJECT_STATUS_DEC2025.md to mark Week 2 as started
- Added test:week2-progress npm script
- Ready for Week 2 manual testing execution

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:load": "k6 run tests/load/k6-load-test.js",
     "test:integration": "node tests/integration/run-all.js",
     "test:automated": "node scripts/run-tests.js --all",
+    "test:week2-progress": "node scripts/week2-progress.js",
     "test:comprehensive": "node scripts/run-all-tests.cjs",
     "test:openai": "cd apps/api && python test_openai.py",
     "dev:api": "python -m uvicorn apps.api.main:app --reload --port 8000",
