feat: add comprehensive Week 2 testing execution tools
- Created week2-test-helpers.js with multiple utilities:
  - Generate test checklist
  - Create test reports
  - Analyze codebase for test scenarios
  - Generate test data
- Added npm scripts for easy access
- Created WEEK2_TESTING_EXECUTION_GUIDE.md with complete workflow
- Includes daily breakdown, issue logging, metrics recording
- Ready for actual Week 2 testing execution

--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test:integration": "node tests/integration/run-all.js",
     "test:automated": "node scripts/run-tests.js --all",
     "test:week2-progress": "node scripts/week2-progress.js",
+    "test:week2-checklist": "node scripts/week2-test-helpers.js checklist",
+    "test:week2-analyze": "node scripts/week2-test-helpers.js analyze",
+    "test:week2-data": "node scripts/week2-test-helpers.js data",
     "test:comprehensive": "node scripts/run-all-tests.cjs",
     "test:openai": "cd apps/api && python test_openai.py",
     "dev:api": "python -m uvicorn apps.api.main:app --reload --port 8000",
