--- a/package.json
+++ b/package.json
@@ -19,6 +19,13 @@
     "perf:all": "npm run perf:tti && npm run perf:fcp && npm run perf:bundle-size && npm run perf:memory",
     "test:load": "k6 run tests/load/k6-load-test.js",
     "test:load:streaming": "k6 run tests/load/k6-streaming.js",
+    "test:load:websocket": "k6 run tests/load/k6-websocket-stress.js",
+    "test:chaos": "node tests/load/chaos-harness.js",
+    "test:chaos:worker": "node tests/load/chaos-harness.js --scenario worker-crash --duration 120",
+    "test:chaos:redis": "node tests/load/chaos-harness.js --scenario redis-disconnect --duration 120",
+    "test:chaos:network": "node tests/load/chaos-harness.js --scenario network-partition --duration 120",
+    "test:chaos:full": "node tests/load/chaos-harness.js --scenario all --duration 600",
+    "test:realtime:integration": "npm run test:load:websocket && npm run test:chaos:full",
     "demo": "node scripts/run-demo.js",
     "test:integration": "node tests/integration/run-all.js",
     "test:automated": "node scripts/run-tests.js --all",
