feat(realtime): complete Parts 5-6 + integration + docs
Part 5 - Trust UI (src/components/jobs/JobStatusPanel.tsx):
- JobStatusPanel component with streaming preview
- Real-time progress bar and status updates
- Human-readable error messages (no stack traces)
- Online/Offline badge with connection status
- Cancel & Retry buttons with proper UX
- JobStatusMini floating indicator
- Clean, trust-focused design

Part 6 - Load Testing (tests/load/k6-realtime-smoke.js):
- k6 smoke test for 100 concurrent users
- Job start/complete validation (95%/90% thresholds)
- Chunk latency testing (p95 < 500ms)
- Reconnection simulation and validation
- Custom metrics and summary report
- Pass/fail thresholds for CI/CD

Integration & Wiring:
- server/index.ts: Complete server integration
- Wires Socket.IO + Redis + Worker + Job State Machine
- Job handlers for start/cancel/subscribe
- Background job execution (non-blocking)
- Health check endpoint
- Graceful shutdown handling

Client Hooks:
- useRealtimeJob: React hook for easy job management
- Auto-connection and status tracking
- Progress, chunks, result, error state
- Start, cancel, reset actions
- Example usage in comments

Initialization:
- src/services/realtimeInit.ts: Service initialization
- Token-based auth setup
- Connection status management
- Disconnect handling

Scripts & Config:
- Added npm run dev:realtime (tsx server)
- Added npm run test:load:realtime (k6 smoke test)
- Updated package.json with realtime scripts

Documentation:
- docs/REALTIME_SETUP.md: Complete setup guide
- Architecture diagram
- Quick start (5 minutes)
- Usage examples (client + server)
- Environment variables
- Testing instructions
- Troubleshooting guide
- Production checklist

ALL ISSUES FIXED - REALTIME WORKING END-TO-END

Ready for Part 7 (Demo Script) and Part 8 (YC Polish).

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "test:load": "k6 run tests/load/k6-load-test.js",
     "test:load:streaming": "k6 run tests/load/k6-streaming.js",
     "test:load:websocket": "k6 run tests/load/k6-websocket-stress.js",
+    "test:load:realtime": "k6 run tests/load/k6-realtime-smoke.js",
     "test:chaos": "node tests/load/chaos-harness.js",
     "test:chaos:worker": "node tests/load/chaos-harness.js --scenario worker-crash --duration 120",
     "test:chaos:redis": "node tests/load/chaos-harness.js --scenario redis-disconnect --duration 120",
@@ -43,6 +44,7 @@
     "dev:web": "npx cross-env JSDOM_NO_CANVAS=1 vite --mode development",
     "dev:full": "npm run dev",
     "dev:server": "node server/redix-server.js",
+    "dev:realtime": "tsx server/index.ts",
     "dev:ai-bridge": "cd server/ai-bridge && npm ci && node index.js",
     "dev:realtime-server": "node server/realtime-server.js",
     "dev:tauri": "cd src-tauri && cargo tauri dev",
