--- a/package.json
+++ b/package.json
@@ -188,6 +188,7 @@
     "@socket.io/redis-adapter": "^8.2.1",
     "@tanstack/react-table": "^8.21.3",
     "@types/dompurify": "^3.0.5",
+    "@types/lunr": "^2.3.7",
     "abort-controller": "^3.0.0",
     "amadeus": "^11.0.0",
     "axios": "^1.7.7",
