--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,30 @@
   "name": "regen-realtime-server",
   "version": "1.0.0",
   "type": "module",
-  "description": "Mock realtime trading server for Trade Mode testing",
-  "main": "realtime-server.js",
+  "description": "Regen realtime server with Socket.IO, Redis, and job streaming",
+  "main": "index.ts",
   "scripts": {
-    "start": "node realtime-server.js",
-    "dev": "node realtime-server.js"
+    "start": "tsx index.ts",
+    "dev": "tsx watch index.ts",
+    "build": "tsc",
+    "test": "echo \"No tests yet\""
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "ws": "^8.18.3",
+    "@socket.io/redis-adapter": "^8.2.1",
+    "body-parser": "^1.20.2",
     "cors": "^2.8.5",
-    "body-parser": "^1.20.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "redis": "^4.6.13",
+    "socket.io": "^4.7.5",
+    "ws": "^8.18.3"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
+    "@types/node": "^20.11.19",
+    "socket.io-client": "^4.8.1",
+    "tsx": "^4.7.1",
+    "typescript": "^5.3.3"
   }
 }
