--- a/package.json
+++ b/package.json
@@ -189,6 +189,7 @@
     "@sentry/react": "^10.27.0",
     "@socket.io/redis-adapter": "^8.2.1",
     "@tanstack/react-table": "^8.21.3",
+    "@tauri-apps/api": "^2.0.0",
     "@types/dompurify": "^3.0.5",
     "@xenova/transformers": "^2.17.2",
     "abort-controller": "^3.0.0",
@@ -218,6 +219,7 @@
     "langchain": "^1.0.4",
     "lightweight-charts": "^5.0.9",
     "lodash-es": "^4.17.21",
+    "lucide-react": "^0.562.0",
     "lunr": "^2.3.9",
     "mammoth": "^1.6.0",
     "meilisearch": "^0.40.0",
@@ -258,8 +260,7 @@
     "y-websocket": "^3.0.0",
     "yjs": "^13.6.27",
     "zod": "^3.25.76",
-    "zustand": "^4.5.2",
-    "@tauri-apps/api": "^2.0.0"
+    "zustand": "^4.5.2"
   },
   "optionalDependencies": {
     "better-sqlite3": "^9.6.0"
